--- a/index.html
+++ b/index.html
@@ -1,123 +1,35 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
-<link rel="stylesheet" href="style.css">
+<head>
+	<meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Karen Bourgeois, Catherine Delaney, Austin Nguyen, Singh Gurvir"/>
+    <meta name="description" content="This is an event site that also includes the weather."/>
+    <meta name="keywords" content="HTML, CSS, JavaScript, APIs, Bootstrap"/>
+	<link rel="stylesheet" href="style.css">
+</head>
 
 <body>
+
+	<header>
+
+	</header>
+
 	<section>
-		<div class="leftBox">
-			<div class="content">
-				<h1>
-					Events and Shows
-				</h1>
-				<p>
-					With the idea of imparting programming
-					knowledge, Mr. Sandeep Jain, an IIT
-					Roorkee alumnus started a dream,
-					GeeksforGeeks. Whether programming
-					excites you or you feel stifled,
-					wondering how to prepare for
-					interview questions or
-					how to ace data structures and
-					algorithms, GeeksforGeeks is a
-					one-stop solution. With every
-					tick of time, we are adding arrows
-					in our quiver. From articles on
-					various computer science subjects
-					to programming problems for practice,
-					from basic to premium courses, from
-					technologies to entrance examinations,
-					we have been building ample content
-					with superior quality. In a short
-					span, we have built a community of
-					1 Million+ Geeks around the world, 20,000+
-					Contributors and 500+ Campus Ambassadors
-					in various colleges across the nation.
-					Our success stories include a lot of
-					students who benefitted in their
-					placements and landed jobs at tech
-					giants. Our vision is to build a gigantic
-					network of geeks and we are only a
-					fraction of it yet.
-				</p>
-			</div>
-		</div>
-		<div class="events">
-			<ul>
-				<li>
-					<div class="time">
-						<h2>
-							15 <br><span>March</span>
-						</h2>
-					</div>
-					<div class="details">
-						<h3>
-							Where is the event happening?
-						</h3>
-						<p>
-							With the idea of imparting programming
-							knowledge, Mr. Sandeep Jain, an IIT
-							Roorkee alumnus started a dream,
-							GeeksforGeeks. Whether programming
-							excites you or you feel stifled,
-							how to ace data structures and
-							algorithms, GeeksforGeeks is a
-							one-stop solution.
-						</p>
-						<a href="#">View Details</a>
-					</div>
-					<div style="clear: both;"></div>
-				</li>
-				<li>
-					<div class="time">
-						<h2>
-							27 <br><span>May</span>
-						</h2>
-					</div>
-					<div class="details">
-						<h3>
-							Where is the event happening?
-						</h3>
-						<p>
-							With the idea of imparting programming
-							knowledge, Mr. Sandeep Jain, an IIT
-							Roorkee alumnus started a dream,
-							GeeksforGeeks. Whether programming
-							excites you or you feel stifled,
-							how to ace data structures and
-							algorithms, GeeksforGeeks is a
-							one-stop solution.
-						</p>=
-						<a href="#">View Details</a>
-					</div>
-					<div style="clear:both;"></div>
-				</li>
-				<li>
-					<div class="time">
-						<h2>
-							12 <br><span>August</span>
-						</h2>
-					</div>
-					<div class="details">
-						<h3>
-							Where is the event happening?
-						</h3>
-						<p>
-							With the idea of imparting programming
-							knowledge, Mr. Sandeep Jain, an IIT
-							Roorkee alumnus started a dream,
-							GeeksforGeeks. Whether programming
-							excites you or you feel stifled,
-							how to ace data structures and
-							algorithms, GeeksforGeeks is a
-							one-stop solution.
-						</p>
-						<a href="#">View Details</a>
-					</div>
-					<div style="clear:both;"></div>
-				</li>
-			</ul>
-		</div>
+
 	</section>
+
+	<section>
+
+	</section>
+
+	<footer>
+		
+	</footer>
+
 </body>
+
 </html>
