Added CSS, HTML and README

--- a/index.html
+++ b/index.html
@@ -15,19 +15,26 @@
 <body>
 
 	<header>
-
+		<h1 class="header-title">Bodesing Events</h1>
+		<input type="search" value="Enter Location here..." class="search">
+		<button class="main-submit">Submit</button>
 	</header>
 
-	<section>
+	<hr>
 
+	<section class="right-box">
+		<p class="city"></p>
+		<ul class="events"></ul>
 	</section>
 
-	<section>
-
+	<section class="left-Box">
+		<div class="five-day"></div>
 	</section>
 
 	<footer>
-		
+		<hr>
+		<p>Copyright &copy;2023 Austin Nguyen | Karen Bourgeois | Singh Gurvir | Catherine Delaney</p>
+
 	</footer>
 
 </body>
