Added logo and credits

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
 	<header>
+		<img src="logo.png" alt="Logo for Bodesing Events" style="height: 70px;">
 		<h1 class="header-title">Bodesing Events</h1>
 		<input type="search" value="Enter Location here..." class="search">
 		<button class="main-submit">Submit</button>
