made changes to the README file

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 	<header>
 		<img src="logo.png" alt="Logo for Bodesing Events" style="height: 70px;">
 		<h1 class="header-title">Bodesing Events</h1>
-		<input type="search" placeholder="Enter Location here..." class="search">
+		<input type="text" placeholder="Enter Location here..." class="search">
 		<button class="main-submit">Submit</button>
 	</header>
 
 	<hr>
 
 	<section class="right-box">
-		<div>
-			<h1 class="city">City</h1>
-		</div>
+		
+		<h1 class="city">City</h1>
+		
 		<div class="card-event">
 			Events
 		</div>
 	</section>
 
 	<section class="left-Box">
-		<div class="five-day">
-			<h1> Day Forcast </h1>
-		</div>
+		
+		<h1> Day Forcast </h1>
+		
 		<div class="card-weather">
 			weather for 5 days
 		</div>
