--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Karen Bourgeois, Catherine Delaney, Austin Nguyen, Singh Gurvir"/>
     <meta name="description" content="This is an event site that also includes the weather."/>
     <meta name="keywords" content="HTML, CSS, JavaScript, APIs, Bootstrap"/>
-	<link rel="stylesheet" href="style.css">
+	
 </head>
 
 <body>
@@ -46,8 +46,9 @@
 		<p>Copyright &copy;2023 Austin Nguyen | Karen Bourgeois | Singh Gurvir | Catherine Delaney</p>
 	</footer>
 
-	<script src="script.js"></script>
-	<script src="weatherAPI.js"></script>
+	<script src="TicketmasterApi.js"></script>
+	
+	
 
 </body>
 
