--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Karen Bourgeois, Catherine Delaney, Austin Nguyen, Singh Gurvir"/>
     <meta name="description" content="This is an event site that also includes the weather."/>
     <meta name="keywords" content="HTML, CSS, JavaScript, APIs, Bootstrap"/>
-	<link rel="stylesheet" href="style.css">
+	
 </head>
 
 <body>
@@ -17,26 +17,38 @@
 	<header>
 		<img src="logo.png" alt="Logo for Bodesing Events" style="height: 70px;">
 		<h1 class="header-title">Bodesing Events</h1>
-		<input type="search" value="Enter Location here..." class="search">
+		<input type="text" placeholder="Enter Location here..." class="search">
 		<button class="main-submit">Submit</button>
 	</header>
 
 	<hr>
 
 	<section class="right-box">
-		<p class="city"></p>
-		<ul class="events"></ul>
+		
+		<h1 class="city">City</h1>
+		
+		<div class="card-event">
+			Events
+		</div>
 	</section>
 
 	<section class="left-Box">
-		<div class="five-day"></div>
+		
+		<h1> Day Forcast </h1>
+		
+		<div class="card-weather">
+			weather for 5 days
+		</div>
 	</section>
 
 	<footer>
 		<hr>
 		<p>Copyright &copy;2023 Austin Nguyen | Karen Bourgeois | Singh Gurvir | Catherine Delaney</p>
-
 	</footer>
+
+	<script src="TicketmasterApi.js"></script>
+	
+	
 
 </body>
 
