--- a/index.html
+++ b/index.html
@@ -3,53 +3,134 @@
 <html lang="en">
 
 <head>
+	 <!-- Meta tags for character set, browser compatibility, and responsive design -->
+
 	<meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Karen Bourgeois, Catherine Delaney, Austin Nguyen, Singh Gurvir"/>
+    <!-- SEO relevant meta tags -->
+	<meta name="author" content="Karen Bourgeois, Catherine Delaney, Austin Nguyen, Singh Gurvir"/>
     <meta name="description" content="This is an event site that also includes the weather."/>
     <meta name="keywords" content="HTML, CSS, JavaScript, APIs, Bootstrap"/>
-	
+		<!--Bootstrap CSS
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+		crossorigin="anonymous" /> --> 
+
+  		<!-- FontAwesome Icons -->
+  		<script src="https://kit.fontawesome.com/7a58e32a8e.js" crossorigin="anonymous"></script>
+     
+  <!-- Link to external CSS for styling -->
+
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- Header section containing the logo, title, and search functionality -->
 
 	<header>
 		<img src="logo.png" alt="Logo for Bodesing Events" style="height: 70px;">
 		<h1 class="header-title">Bodesing Events</h1>
-		<input type="text" placeholder="Enter Location here..." class="search">
-		<button class="main-submit">Submit</button>
+		<!--
+		<input type="search" placeholder="Enter Location here..." class="search">
+		<button class="main-submit">Submit</button> 
+		-->
+		
+		<div class="col-sm-4">
+			<form id="user-form">
+			  <div class="mb-3 border-bottom border-dark">
+				<label for="exampleInputEmail1" class="form-label"><span id="city1">Search for a City:</span></label>
+				<input type="text" class="form-control" id="userCity" placeholder="Ex:Dallas">
+			  <br>
+			  <button type="submit" class="btn btn-primary" id="userSearchbtn">Search</button>
+			</div>
+			</form>
+		 
+        <div class="container btn-group-vertical" id="pastSearches">
+			<div>
+			  Past Searches
+			</div>
+		  </div>
+		</div>
 	</header>
 
-	<hr>
+	<hr>  <!-- Horizontal rule for visual separation -->
+
+	    <!-- Section for displaying city-related information and events -->
 
 	<section class="right-box">
-		
-		<h1 class="city">City</h1>
-		
+		<div>
+			<h1 class="city">City</h1>
+		</div>
 		<div class="card-event">
 			Events
 		</div>
 	</section>
+    <!-- Section for displaying 5-day weather forecast -->
 
 	<section class="left-Box">
-		
-		<h1> Day Forcast </h1>
-		
-		<div class="card-weather">
-			weather for 5 days
-		</div>
-	</section>
+		<div class="five-day">
+			<h1>5-Day Forecast</h1>
+    </div>
+	<!--
+    <div class="card-weather">
+         Placeholder for weather data 
+        <div id="weather-forecast"></div>
+    </div>
+	-->
+	   <!-- Weather Display Column (test) -->
+	   <div class="col-sm-8">
+        <!-- Current Weather -->
+        <div class="container" id="currentDay" hidden>
+          <div class="border border-dark" id="cityData">
+           <h1 id="city">CityName </h1> 
+           <span id="date"></span>
+           <br>
+           <img id="icon"></img>
+           <p>Temp:<span id="temp"></span></p>
+           <br>
+           <p >Wind:<span id="wind"></span></p>
+           <br>
+           <p>Humidity:<span id="humid"></span></p>
+          </div>
+        </div>
+        <!-- 5-Day Forecast -->
+        <div id="cards" hidden>
+        <h3 class="text-center">5-Day Forecast</h3>
+        <div class="row">
+            <div class="card p-1 col-sm-2 m-3 bg-primary text-light text-center" id="day-1"></div>
+            <div class="card p-2 col-sm-2 m-3 bg-primary text-light text-center" id="day-2"></div>
+            <div class="card p-2 col-sm-2 m-3 bg-primary text-light text-center" id="day-3"></div>
+            <div class="card p-2 col-sm-2 m-3 bg-primary text-light text-center" id="day-4"></div>
+            <div class="card p-2 col-sm-2 m-3 bg-primary text-light text-center" id="day-5"></div>
+        </div>
+      </div>
+</section>
+    <!-- Footer section for copyright information -->
 
 	<footer>
-		<hr>
+		<hr> <!-- Horizontal rule for visual separation -->
 		<p>Copyright &copy;2023 Austin Nguyen | Karen Bourgeois | Singh Gurvir | Catherine Delaney</p>
 	</footer>
-
-	<script src="TicketmasterApi.js"></script>
-	
-	
-
+  
+	<!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    
+    <script
+    src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+    crossorigin="anonymous"
+  ></script> 
+  
+    <!--Using day JS for date-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+	<script src="./script.js"></script>
 </body>
 
 </html>
+
