fixing some CSS and add Events

--- a/indexevent.html
+++ b/indexevent.html
@@ -13,6 +13,6 @@
     <input type="text" id="cityInput">
     <button onclick="searchEvents()">Search</button>
     <div id="results"></div>
-    <script src="script.js"></script>
+    <script src="eventscript.js"></script>
 </body>
 </html>
