--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 	<meta name="author" content="Karen Bourgeois, Catherine Delaney, Austin Nguyen, Singh Gurvir"/>
     <meta name="description" content="This is an event site that also includes the weather."/>
     <meta name="keywords" content="HTML, CSS, JavaScript, APIs, Bootstrap"/>
-		<!--Bootstrap CSS
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-		rel="stylesheet"
-		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-		crossorigin="anonymous" /> --> 
+	<!--Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+	crossorigin="anonymous" />
 
-  		<!-- FontAwesome Icons -->
-  		<script src="https://kit.fontawesome.com/7a58e32a8e.js" crossorigin="anonymous"></script>
+  	<!-- FontAwesome Icons -->
+  	<script src="https://kit.fontawesome.com/7a58e32a8e.js" crossorigin="anonymous"></script>
      
-  <!-- Link to external CSS for styling -->
-
+  	<!-- Link to external CSS for styling and reset files -->
+	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,10 +32,6 @@
 	<header>
 		<img src="logo.png" alt="Logo for Bodesing Events" style="height: 70px;">
 		<h1 class="header-title">Bodesing Events</h1>
-		<!--
-		<input type="search" placeholder="Enter Location here..." class="search">
-		<button class="main-submit">Submit</button> 
-		-->
 		
 		<div class="col-sm-4">
 			<form id="user-form">
@@ -60,11 +56,9 @@
 	    <!-- Section for displaying city-related information and events -->
 
 	<section class="right-box">
-		<div>
-			<h1 class="city">City</h1>
-		</div>
+		<dev class="events-title">Events</dev>
 		<div class="card-event">
-			Events
+			<div id="results"></div>
 		</div>
 	</section>
     <!-- Section for displaying 5-day weather forecast -->
@@ -73,12 +67,7 @@
 		<div class="five-day">
 			<h1>5-Day Forecast</h1>
     </div>
-	<!--
-    <div class="card-weather">
-         Placeholder for weather data 
-        <div id="weather-forecast"></div>
-    </div>
-	-->
+	
 	   <!-- Weather Display Column (test) -->
 	   <div class="col-sm-8">
         <!-- Current Weather -->
@@ -130,6 +119,7 @@
       crossorigin="anonymous"
     ></script>
 	<script src="./script.js"></script>
+	<link src="eventscript.js"></script>
 </body>
 
 </html>
