--- a/indexNew.html
+++ b/indexNew.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO relevant meta tags -->
 	<meta name="author" content="Karen Bourgeois, Catherine Delaney, Austin Nguyen, Singh Gurvir"/>
-    <meta name="description" content="This is an event site that also includes the weather."/>
+    <meta name="description" content="This is an event listing website that also shows the weather forecast."/>
     <meta name="keywords" content="HTML, CSS, JavaScript, APIs, Bootstrap"/>
 	<!--Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -31,12 +31,12 @@
 
 	<header>
 		<img src="logo.png" alt="Logo for Bodesing Events" style="height: 70px;">
-		<h1 class="header-title">Bodesing Events</h1>
+		<h1 class="header-title">BODESING Events</h1>
 		
 		<div class="col-sm-4">
 			<form id="user-form">
 			  <div class="mb-3 border-bottom border-dark">
-				<label for="exampleInputEmail1" class="form-label"><span id="city1">Search for a Weather:</span></label>
+				<label for="exampleInputEmail1" class="form-label"><span id="city1">Enter City:</span></label>
 				<input type="text" class="form-control" id="userCity" placeholder="Ex:Dallas">
 			  <br>
 			  <button type="submit" class="btn btn-primary" id="userSearchbtn">Search</button>
@@ -46,7 +46,7 @@
 		 
         <div class="container btn-group-vertical" id="pastSearches">
 			<div>
-			  Past Searches for weather
+			  Past Weather Searches
 			</div>
 		  </div>
 		</div>
@@ -65,7 +65,7 @@
 		</div>
 		<br><br>
 		<div class="container">
-			<h1 class="weather-header">5-Day Forcast</h1>
+			<h1 class="weather-header">5-Day Forecast</h1>
 			<!-- Weather Display Column (test) -->
 			<div class="col-sm-12">
 				<!-- Current Weather -->
@@ -75,7 +75,7 @@
 				<span id="date"></span>
 				<br>
 				<img id="icon"></img>
-				<p>Temp:<span id="temp"></span></p>
+				<p>Temperature:<span id="temp"></span></p>
 				<br>
 				<p >Wind:<span id="wind"></span></p>
 				<br>
